Logistic regression checkpoint modified

--- a/DSAndML/Jupyternotebook/LogisticRegressionOnTitanicData.ipynb
+++ b/DSAndML/Jupyternotebook/LogisticRegressionOnTitanicData.ipynb
@@ -2136,7 +2136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "id": "0ac20bde-0f1a-47ac-942b-30302d567f8e",
    "metadata": {},
    "outputs": [
@@ -2181,7 +2181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "89d60389-3afe-45c1-8b16-122e2ad6ffb9",
    "metadata": {},
    "outputs": [],
@@ -2192,10 +2192,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "b13f9d1e-8b04-4ef2-8811-c8d612dd257c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[102,  24],\n",
+       "       [ 24,  64]])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "confusion_matrix(y_test,predictions)"
    ]
