--- a/DSAndML/Jupyternotebook/IrisAnalysis.ipynb
+++ b/DSAndML/Jupyternotebook/IrisAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "id": "277ece82-0f42-4bf9-bfdf-525f6457b7b4",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "13bc7efc-84b1-4dd1-bc03-65472e3ba6dd",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "be59c28c-885c-437c-a095-60454196d398",
    "metadata": {},
    "outputs": [
@@ -130,7 +130,7 @@
        "4   5            5.0           3.6            1.4           0.2  Iris-setosa"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "5b1ae500-6b1f-4688-b53c-7b3cf255690f",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
        "max    150.000000       7.900000      4.400000       6.900000      2.500000"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "a12a6719-b03c-49e0-8c3a-38182f669cc7",
    "metadata": {},
    "outputs": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "5bfdd59e-a641-4039-9eb6-d5879390d826",
    "metadata": {},
    "outputs": [],
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "2d5a121a-6844-4324-bc70-836d4beab26d",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "840435db-8749-4097-89d1-f92b32955183",
    "metadata": {},
    "outputs": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "695b13a4-3513-490a-bfe9-c4927f225cf5",
    "metadata": {},
    "outputs": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "7b2255b9-615d-425a-b607-2e0d9ccc97bf",
    "metadata": {},
    "outputs": [
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "67567726-124a-49e1-9f60-300a28f63839",
    "metadata": {},
    "outputs": [
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "bda5f90a-9bec-4657-8ef2-c462a7302d6d",
    "metadata": {},
    "outputs": [
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "eda0bb7c-19da-4f8b-a236-4d166ffb110f",
    "metadata": {},
    "outputs": [
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 14,
    "id": "042d97fc-2c05-48bb-a17e-573f61cbb8da",
    "metadata": {},
    "outputs": [
@@ -682,31 +682,31 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_11956\\3587667341.py:6: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  if not np.issubdtype(X.dtypes[0], np.number):\n"
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_10676\\1067462370.py:6: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  if not np.issubdtype(X.dtypes[0], np.number):  # Check if the first column in X is not numeric\n"
      ]
     }
    ],
    "source": [
     "# Step 1: Prepare features and target\n",
-    "X = df[[\"SepalLengthCm\", \"PetalLengthCm\"]].copy()  # Select two features\n",
-    "y = df[\"Species\"]\n",
+    "X = df[[\"SepalLengthCm\", \"PetalLengthCm\"]].copy()  # Select two features (SepalLengthCm and PetalLengthCm) as the input features\n",
+    "y = df[\"Species\"]  # Select the target variable (Species)\n",
     "\n",
     "# Ensure X and y are numeric\n",
-    "if not np.issubdtype(X.dtypes[0], np.number):\n",
-    "    print(\"Converting X to numeric.\")\n",
-    "    X = pd.get_dummies(X, drop_first=True)\n",
+    "if not np.issubdtype(X.dtypes[0], np.number):  # Check if the first column in X is not numeric\n",
+    "    print(\"Converting X to numeric.\")  # Notify that X will be converted to numeric\n",
+    "    X = pd.get_dummies(X, drop_first=True)  # Convert non-numeric columns in X to dummy/indicator variables\n",
     "\n",
-    "if not np.issubdtype(y.dtypes, np.number):\n",
-    "    print(\"Encoding target variable.\")\n",
-    "    from sklearn.preprocessing import LabelEncoder\n",
-    "    label_encoder = LabelEncoder()\n",
-    "    y = label_encoder.fit_transform(y)"
+    "if not np.issubdtype(y.dtypes, np.number):  # Check if the target variable (y) is not numeric\n",
+    "    print(\"Encoding target variable.\")  # Notify that y will be encoded to numeric values\n",
+    "    from sklearn.preprocessing import LabelEncoder  # Import LabelEncoder for encoding categorical target variables\n",
+    "    label_encoder = LabelEncoder()  # Create an instance of LabelEncoder\n",
+    "    y = label_encoder.fit_transform(y)  # Encode the target variable (y) to numeric labels\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 15,
    "id": "ffd0cc05-67d7-4908-a560-3619bc432303",
    "metadata": {},
    "outputs": [
@@ -813,7 +813,7 @@
        "[150 rows x 2 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 16,
    "id": "35f9faba-e803-4492-aae8-cab6a1dcbc61",
    "metadata": {},
    "outputs": [],
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 17,
    "id": "17e6c9e3-88d5-448d-aee8-2ff0850172a8",
    "metadata": {},
    "outputs": [
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 18,
    "id": "0e5e596e-fcb4-402a-90b5-8f087efdd1b9",
    "metadata": {},
    "outputs": [
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 20,
    "id": "ec8edb96-9304-4eff-bd58-45640faf3cf1",
    "metadata": {},
    "outputs": [
@@ -936,26 +936,33 @@
    ],
    "source": [
     "# Step 5: Visualize decision boundaries\n",
+    "# Create a mesh grid for the feature space\n",
     "X1, X2 = np.meshgrid(\n",
-    "    np.arange(start=X_train.iloc[:, 0].min() - 1, stop=X_train.iloc[:, 0].max() + 1, step=0.1),\n",
-    "    np.arange(start=X_train.iloc[:, 1].min() - 1, stop=X_train.iloc[:, 1].max() + 1, step=0.1)\n",
+    "    np.arange(start=X_train.iloc[:, 0].min() - 1, stop=X_train.iloc[:, 0].max() + 1, step=0.1),  # Generate values for the first feature\n",
+    "    np.arange(start=X_train.iloc[:, 1].min() - 1, stop=X_train.iloc[:, 1].max() + 1, step=0.1)   # Generate values for the second feature\n",
     ")\n",
     "\n",
-    "grid_points = pd.DataFrame(np.array([X1.ravel(), X2.ravel()]).T, columns=X_train.columns)\n",
+    "# Create a DataFrame of all points in the grid\n",
+    "grid_points = pd.DataFrame(np.array([X1.ravel(), X2.ravel()]).T, columns=X_train.columns)  # Flatten the grid and convert to a DataFrame\n",
     "\n",
-    "Z = log_reg.predict(grid_points).reshape(X1.shape)\n",
+    "# Predict the class for each point in the grid\n",
+    "Z = log_reg.predict(grid_points).reshape(X1.shape)  # Predict the target for grid points and reshape to match grid dimensions\n",
     "\n",
     "# Visualize decision boundaries\n",
-    "plt.contourf(X1, X2, Z, alpha=0.75, cmap=ListedColormap(('red', 'green', 'blue')))\n",
+    "plt.contourf(X1, X2, Z, alpha=0.75, cmap=ListedColormap(('red', 'green', 'blue')))  # Draw decision boundaries with different colors for each class\n",
     "\n",
-    "# Plot training points (no need for map since y_train is numeric)\n",
-    "plt.scatter(X_train.iloc[:, 0], X_train.iloc[:, 1], \n",
-    "            c=y_train, edgecolor='black', cmap=ListedColormap(('red', 'green', 'blue')))\n",
+    "# Plot the training data points\n",
+    "plt.scatter(X_train.iloc[:, 0], X_train.iloc[:, 1],  # Plot the first and second features from the training set\n",
+    "            c=y_train, edgecolor='black', cmap=ListedColormap(('red', 'green', 'blue')))  # Color points by their class with an edge color\n",
     "\n",
-    "plt.title('Logistic Regression Decision Boundary')\n",
-    "plt.xlabel(X_train.columns[0])\n",
-    "plt.ylabel(X_train.columns[1])\n",
-    "plt.show()\n"
+    "# Add title and labels\n",
+    "plt.title('Logistic Regression Decision Boundary')  # Set the plot title\n",
+    "plt.xlabel(X_train.columns[0])  # Label for the x-axis (first feature)\n",
+    "plt.ylabel(X_train.columns[1])  # Label for the y-axis (second feature)\n",
+    "\n",
+    "# Display the plot\n",
+    "plt.show()  # Render the plot\n",
+    "\n"
    ]
   },
   {
